Toggle text to active offer changed

--- a/Front/src/app/main/offer-details/offer-details.component.html
+++ b/Front/src/app/main/offer-details/offer-details.component.html
@@ -52,7 +52,7 @@
               <h2>Oferta</h2>
             </mat-card-title>
             <mat-slide-toggle [checked]="offer.active" (change)="toggleActive($event.checked)"
-              color="primary">Activo</mat-slide-toggle>
+              color="primary">{{ toggleLabel }}</mat-slide-toggle>
           </mat-card-header>
           <mat-card-content>
 
