--- a/Front/src/app/main/admin-panel/admin-panel.component.css
+++ b/Front/src/app/main/admin-panel/admin-panel.component.css
@@ -23,10 +23,25 @@ th {
   border-bottom: 2px solid #c51510;
 }
 
+#loadMeesage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: large;
+  font-weight: bolder;
+  color: #6d6d6d;
+}
+
+#errorMessage {
+  text-align: center;
+  font-size: large;
+  font-weight: bolder;
+  color: #6d6d6d;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
   .admin-container {
     padding: 1%;
   }
 }
-
