Loading wheel added to display-offers and company-panel

--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -170,6 +170,22 @@ mat-card-subtitle {
   width: max-content;
 }
 
+#loadMeesage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: large;
+  font-weight: bolder;
+  color: #6d6d6d;
+}
+
+#errorMessage {
+  text-align: center;
+  font-size: large;
+  font-weight: bolder;
+  color: #6d6d6d;
+}
+
 /* === MENSAJE SIN OFERTAS === */
 .no-offers {
   text-align: center;
