--- a/Front/src/app/main/company-panel/company-panel.component.css
+++ b/Front/src/app/main/company-panel/company-panel.component.css
@@ -350,6 +350,23 @@ mat-card-header {
   max-width: 100%;
 }
 
+#loadMeesage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: large;
+  font-weight: bolder;
+  color: #6d6d6d;
+  margin-top: 5%;
+}
+
+#errorMessage {
+  text-align: center;
+  font-size: large;
+  font-weight: bolder;
+  color: #6d6d6d;
+}
+
 /* === RESPONSIVE DESIGN === */
 @media (max-width: 768px) {
   .cards-grid {
