Sincronizando todos los cambios mensaje error

--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -50,9 +50,9 @@
   </div>
 </div>
 
-<!-- Mensaje cuando no hay ofertas disponibles -->
+<!-- Mensaje aviso: No hay ofertas -->
 <ng-template #noOffers>
-  <div class="no-offers">
+  <div id="errorMessage">
     <mat-icon>info</mat-icon>
     <p>No hay ofertas disponibles en este momento</p>
   </div>
