--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -174,24 +174,19 @@ mat-card-subtitle {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: large;
-  font-weight: bolder;
-  color: #6d6d6d;
-}
-
-#errorMessage {
-  text-align: center;
+  margin-top: 4%;
   font-size: large;
   font-weight: bolder;
   color: #6d6d6d;
 }
 
 /* === MENSAJE SIN OFERTAS === */
-.no-offers {
+#errorMessage {
   text-align: center;
-  padding: 60px;
-  color: #999;
-  background-color: #f2f2f2;
+  margin-top: 4%;
+  font-size: large;
+  font-weight: bolder;
+  color: #6d6d6d;
 }
 
 /* Para elementos mat-card específicos */
