--- a/Front/src/app/main/offer-details/offer-details.component.css
+++ b/Front/src/app/main/offer-details/offer-details.component.css
@@ -109,6 +109,28 @@ mat-card-header {
   color: #e61b15;
 }
 
+#name:hover {
+  cursor: pointer;
+  color: #e61b15;
+
+}
+
+.state-pending {
+  color: #BA7705;
+}
+
+.state-accepted {
+  color: #3FCC33;
+}
+
+.state-rejected {
+  color: #D62032;
+}
+
+.state-unknown {
+  color: #6d6d6d;
+}
+
 .offer-title-section h1 {
   margin: 0;
   font-size: 2rem;
@@ -267,6 +289,7 @@ mat-card-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .candidate-basic h3 {
@@ -604,4 +627,8 @@ mat-card-header {
   font-size: 0.9rem;
   margin-top: 8px;
   font-style: italic;
+}
+
+mat-elevation-z8 table-container {
+  width: 100dvh;
 }
